--- a/style/poportfolio.css
+++ b/style/poportfolio.css
@@ -77,10 +77,12 @@ background-color: #c4a088;
 border-radius: 10;
 padding: 130px 150px;
 text-align: center;
+margin-bottom: 20px;
 }
 .section-title{
+    text-align: center;
     font-weight: 700;
-    font-size: 35px;
+    font-size: 50px;
 
 margin-bottom: 30px;
 
@@ -105,4 +107,28 @@ margin-bottom: 30px;
     font-size: 20px;
     color: #474747;
 
+}
+/* what i do */
+.what-i-do{
+    margin: 130px;
+
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background-color: #FFFFFF;
+    box-shadow: 0 6px 50px rgba(212, 41, 41, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #757575;
 }
