--- a/style/poportfolio.css
+++ b/style/poportfolio.css
@@ -132,3 +132,54 @@ margin-bottom: 30px;
 .skill-description{
     color: #757575;
 }
+
+
+/* resume style */
+.resume-content{
+    display: flex;
+    gap: 24px;
+    margin-left: 30px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title{
+color: #757575;
+font-weight: 600;
+font-size: 20px;
+margin-bottom: 20px;
+}
+.resume .description{
+    color: #757575;
+
+}
+.resume-button{
+    margin-top: 24px;
+    
+}
+/* contact style */
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #eee7e2;
+    padding: 130px 200px;
+}
+.section-title{
+    text-align: center;
+}
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+.section-description{
+    margin-bottom: 30px;
+}
