--- a/style/poportfolio.css
+++ b/style/poportfolio.css
@@ -15,7 +15,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 30px 130px;
+    padding: 50px 200px;
 }
 .nav-style{
  
